fixed css on mobile homepage.

--- a/themes/deadhand/assets/scss/06-pages/_page-home.scss
+++ b/themes/deadhand/assets/scss/06-pages/_page-home.scss
@@ -102,6 +102,8 @@
     }
     @media (max-width: $breakpoint__md) {
       max-width: initial;
+      margin-left: auto;
+      margin-right: auto;
     }
     p {
       font-size: 1.5vw;
